# statplot

./: .gitignore  pyproject.toml  setup.cfg
examples/: generate.sh  plot_multiple_players.py  sync.sh  test.py
src/statplot/: data_getters.py  players.py  plotting.py  skins.py
