[metadata]
name = statplot-amund211
version = 0.1.0
author = Amund Eggen Svandal
author_email = aesvandal@gmail.com
description = Plot your hypixel stats from saved calls to the player endpoint
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Amund211/statplot
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    asyncpixel
    requests

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,.mypy_cache,__pycache__,build,dist,venv
